# CppPlayground

./: .gitignore  AbstractFactory.cxx  AbstractFactory2.cxx  Adapter.cxx  Bridge.cxx  Builder.cxx  ChainOfResponsibility.cxx  Composite.cxx  Decorator.cxx  EventBus.cxx  Exception.cxx  FlyWeight.cxx  FlyWeight2.cxx  Iterator.cxx  KalmanFilter.cxx  KalmanFilter.hpp  KalmanFilter2D.cxx  Mediator.cxx  Memento.cxx  MockUpdaterPlugIn.cxx  Prototype.cxx  Proxy.cxx  PubSub.cxx  PubSubLambda.cxx  PubSubLambda2.cxx  README.md  SafeFlag.cxx  SafeFlag.hpp  SharedFrameBuffer.cxx  SharedFrameBuffer.hpp  Singleton.cxx  StateMachine.cxx  Strategy.cxx  Template.cxx  Updater.cxx  Updater.hpp  Visitor.cxx  VisitorOOP.cxx  binary_search.cxx  chi_squared_test.cxx  (+10 more)
Updater/: MockUpdaterPlugIn.cxx  Updater.cxx  Updater.hpp
capn/: README.md  capn_client_helper.h  client.cpp  example.capnp  registry.capnp  registry.hpp  registry_client.cxx  registry_server.cxx  server.cpp
grpc/: CMakeLists.txt  ExampleClient.cxx  ExampleClient.hpp  ExampleService.cxx  ExampleService.hpp  GrpcUtil.hpp  README.md  example.proto
